Fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ ul {
 
 .headline {
 	background-color: #007b70;
-	padding-bottom: 3.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .headshot {
